Fixed wrong size of textarea when editing a note.

--- a/public/styles/pastel.scss
+++ b/public/styles/pastel.scss
@@ -66,7 +66,9 @@ body #editor {
 	  top: 40px;
 	  bottom: 10px;
 	  left: 20px;
-	  right: 20px;
+	  /*right: 20px;*/
+	  /* right doesn't seem to work with textarea elements... so do it via width */
+	  width: calc(100% - 40px);
 	  
 	  padding: 5px; border: none;
 	}
